--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -1,3 +1,7 @@
+# Electrum-DASH 2.4.1
+ - 
+
+---- Electrum Original Release Notes ----
 # Release 2.4.1
  * Use ssl.PROTOCOL_TLSv1
  * Fix DNSSEC issues with ECDSA signatures
