revert unnecessary Dashification

--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -1,7 +1,3 @@
-# Electrum-DASH 2.4.1
- - 
-
----- Electrum Original Release Notes ----
 # Release 2.4.1
  * Use ssl.PROTOCOL_TLSv1
  * Fix DNSSEC issues with ECDSA signatures
@@ -20,7 +16,7 @@
    in DNS (OpenAlias). The identity of the requestor is verified using
    DNSSEC.
  * Payment requests signed with OpenAlias keys can be shared as
-   dash: URIs, if they are simple (a single address-type
+   bitcoin: URIs, if they are simple (a single address-type
    output). The BIP21 URI scheme is extended with 'name', 'sig',
    'time', 'exp'.
  * Arbitrary m-of-n multisig wallets are supported (n<=15).
@@ -94,7 +90,7 @@
  * A Search Box is available in the GUI (Ctrl-S)
  * Payment requests have an expiration date and can be exported to
    BIP70 files.
- * file: scheme support in BIP72 URIs: "dash:?r=file:///..."
+ * file: scheme support in BIP72 URIs: "bitcoin:?r=file:///..."
  * Own addresses are shown in green in the Transaction dialog.
  * Address History dialog.
  * The OpenAlias plugin was improved.
