--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -1,4 +1,8 @@
-# Release 2.9.3.1
+# Release 2.9.3.2 (Security update)
+ * The JSONRPC interface is password protected
+ * JSONRPC commands are disabled if the GUI is running, except 'ping',
+   which is used to determine if a GUI is already running
+# Release 2.9.3.1 (Security update)
  * Fix a vulnerability caused by Cross-Origin Resource Sharing (CORS)
    in the JSONRPC interface. Previous versions of Electrum are
    vulnerable to port scanning and deanonimization attacks from
