--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -2,6 +2,7 @@
  * The JSONRPC interface is password protected
  * JSONRPC commands are disabled if the GUI is running, except 'ping',
    which is used to determine if a GUI is already running
+ * Fix hardware wallets supoort for Windows/OSX builds
 # Release 2.9.3.1 (Security update)
  * Fix a vulnerability caused by Cross-Origin Resource Sharing (CORS)
    in the JSONRPC interface. Previous versions of Electrum are
