--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,6 @@
+AXErunners
+charlesrocket
+
 ThomasV - Creator and maintainer.
 Animazing / Tachikoma - Styled the new GUI. Mac version.
 Azelphur - GUI stuff.
