add checkpoints to relnotes, fix setup.py

--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -47,6 +47,10 @@
    create several transactions before broadcasting them. Outgoing
    transactions that have been removed from the memory pool are also
    saved in the wallet, and can be broadcast again.
+ * Checkpoints: The initial download of a headers file was replaced
+   with hardcoded checkpoints. The wallet uses one checkpoint per
+   retargeting period. The headers for a retargeting period are
+   downloaded only if transactions need to be verified in this period.
  * The 'privacy' and 'priority' coin selection policies have been
    merged into one. Previously, the 'privacy' policy has been unusable
    because it was was not prioritizing confirmed coins. The new policy
