--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -1,3 +1,70 @@
+# Release 3.2.2
+
+ * Fix DNS resolution on Windows
+ * Fix websocket bug in daemon
+
+
+# Release 3.2.1
+
+ * fix Windows binaries: due to build process changes, the locale files
+   were not included; the language could not be changed from English
+ * fix Linux distributables: wordlists were not included (#4475)
+
+
+# Release 3.2.0
+
+ * If present, libsecp256k1 is used to speed up elliptic curve
+   operations. The library is bundled in the Windows, MacOS, and
+   Android binaries. On Linux, it needs to be installed separately.
+ * Two-factor authentication is available on Android. Note that this
+   will only provide additional security if one time passwords are
+   generated on a separate device.
+ * Semi-automated crash reporting is implemented for Android.
+ * Transactions that are dropped from the mempool are kept in the
+   wallet as 'local', and can be rebroadcast. Previously these
+   transactions were deleted from the wallet.
+ * The scriptSig part of transaction inputs are no longer
+   parsed, unless actually needed. The wallet will no longer display
+   'from' addresses corresponding to transaction inputs, except for
+   its own inputs.
+ * The partial transaction format has been incompatibly changed. This
+   was needed as for partial transactions the scriptSig has to
+   be parsed, but for signed transactions we did not want to do the
+   parsing.  Users should make sure that all instances of Electrum
+   they use to co-sign or offline sign, are updated together.
+ * Signing of partial transactions created with online imported
+   addresses wallets now supports significantly more
+   setups. Previously only online p2pkh address + offline WIF was
+   supported.  Now the following setups are all supported:
+   - online p2pkh address + offline WIF,
+   - online p2pkh address + offline seed/xprv,
+   - online p2sh-multisig address + offline seeds/xprvs
+     (potentially distributed among several different machines)
+   Note that for the online address + offline HD secret case, you need
+   the offline wallet to recognize the address (i.e. within gap
+   limit).  Having an xpub on the online machine is still the
+   recommended setup, as this allows the online machine to generate
+   new addresses on demand.
+ * Added Revealer plugin. ( https://revealer.cc ) Revealer is a seed
+   phrase back-up solution. It allows you to create a cold, analog,
+   multi-factor backup of your wallet seeds, or of any arbitrary
+   secret. The Revealer utilizes a transparent plastic visual one time
+   pad.
+ * Hardware wallets: a "show address" button is now displayed in the
+   Receive tab of the Qt GUI. (#4316)
+ * Trezor One: implemented advanced/matrix recovery (#4329)
+ * Qt/Kivy: added "duff" as optional base unit.
+ * Kivy GUI: significant performance improvements when displaying
+   history and address list of large wallets; and transaction dialog
+   of large transactions.
+ * Windows: use dnspython to resolve dns instead of socket.getaddrinfo
+   (#4422)
+ * Importing minikeys: use uncompressed pubkey instead of compressed
+   (#4384)
+ * SPV proofs: check inner nodes not to be valid transactions (#4436)
+ * Several other minor bugfixes and usability improvements.
+
+
 # Release 3.1.4
 
  * QR scan fixed
