--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -11,6 +11,9 @@
  * fix #4491: on Android, if user had set "uDASH" as base unit, app crashed
  * fix #4497: on Android, paying bip70 invoices from cold start did not work
  * Several other minor bugfixes and usability improvements.
+ * Rename to Dash-Electrum
+ * Add "Use Tor Proxy on startup" option, add Tor Proxy setup to Win builds,
+   add docs to setup Tor Proxy on other platforms. Warning if run without Tor.
 
 
 # Release 3.2.2.1
