rename to Dash Electrum

--- a/debian/electrum-dash.1
+++ b/debian/electrum-dash.1
@@ -5,9 +5,9 @@ electrum-dash \- Lightweight Dash client
 .B electrum-dash [options] command [options]
 .SH DESCRIPTION
 .PP
-Dash-Electrum is a lightweight Dash client.
+Dash Electrum is a lightweight Dash client.
 .br
-Dash-Electrum protects from losing dashcoins in a backup mistake or computer
+Dash Electrum protects from losing dashcoins in a backup mistake or computer
 failure. It allows recovery of wallet from a passphrase which you can
 learn by heart or write it down on a paper.
 .br
@@ -66,7 +66,7 @@ default language used in GUI
 \fB\-u, \-\-usb\fR
 Turn on support for hardware wallets (EXPERIMENTAL).
 .SH AUTHORS
-Dash-Electrum client was initially written by ThomasV
+Dash Electrum client was initially written by ThomasV
 <\fIthomasv@gitorious\fR>
 .br
 This manual page was written by Vasudev Kamath
