rename man pages

--- a/debian/electrum-axe.1
+++ b/debian/electrum-axe.1
@@ -5,9 +5,9 @@ electrum-axe \- Lightweight AXE client
 .B electrum-axe [options] command [options]
 .SH DESCRIPTION
 .PP
-Electrum-AXE is a lightweight AXE client.
+AXE Electrum is a lightweight AXE client.
 .br
-Electrum-AXE protects from losing AXE coins in a backup mistake or computer
+AXE Electrum protects from losing axecoins in a backup mistake or computer
 failure. It allows recovery of wallet from a passphrase which you can
 learn by heart or write it down on a paper.
 .br
@@ -66,7 +66,7 @@ default language used in GUI
 \fB\-u, \-\-usb\fR
 Turn on support for hardware wallets (EXPERIMENTAL).
 .SH AUTHORS
-Electrum-AXE client was initially written by ThomasV
+AXE Electrum client was initially written by ThomasV
 <\fIthomasv@gitorious\fR>
 .br
 This manual page was written by Vasudev Kamath
