--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -1,3 +1,9 @@
+# Release 3.2.3.2
+
+ * Support of DIP2 special tx
+ * Fix Kivy SettingsItem layout for small screens
+ * Fix Testnet blockexplorer URI
+
 # Release 3.2.3.1
 
  * Rename to Dash-Electrum
