--- a/debian/electrum-axe.1
+++ b/debian/electrum-axe.1
@@ -5,9 +5,9 @@ electrum-axe \- Lightweight AXE client
 .B electrum-axe [options] command [options]
 .SH DESCRIPTION
 .PP
-AXE Electrum is a lightweight AXE client.
+Axe Electrum is a lightweight AXE client.
 .br
-AXE Electrum protects from losing axecoins in a backup mistake or computer
+Axe Electrum protects from losing axecoins in a backup mistake or computer
 failure. It allows recovery of wallet from a passphrase which you can
 learn by heart or write it down on a paper.
 .br
@@ -66,10 +66,9 @@ default language used in GUI
 \fB\-u, \-\-usb\fR
 Turn on support for hardware wallets (EXPERIMENTAL).
 .SH AUTHORS
-AXE Electrum client was initially written by ThomasV
+Axe Electrum client was initially written by ThomasV
 <\fIthomasv@gitorious\fR>
 .br
 This manual page was written by Vasudev Kamath
 <\fIkamathvasudev@gmail.com\fR> for Debian Project (but can be used by
 others).
-
