protx: import/export protx mns

--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -13,6 +13,7 @@
    wallets being created in rare cases (#5082, #5057)
  * fix compatibility with Qt 5.12 (#5109)
  * hardware wallets: the Hideez Wallet is now supported
+ * enhance ProTx mangager functionality, import/export DIP3 MNs
 
 
 # Release 3.3.3
