--- a/debian/electrum-axe.1
+++ b/debian/electrum-axe.1
@@ -1,11 +1,11 @@
 .TH electrum-axe 1 "23 June 2013" "electrum-axe"
 .SH NAME
-electrum-axe \- Lightweight AXE client
+electrum-axe \- Lightweight Axe client
 .SH SYNOPSIS
 .B electrum-axe [options] command [options]
 .SH DESCRIPTION
 .PP
-Axe Electrum is a lightweight AXE client.
+Axe Electrum is a lightweight Axe client.
 .br
 Axe Electrum protects from losing axecoins in a backup mistake or computer
 failure. It allows recovery of wallet from a passphrase which you can
@@ -72,3 +72,4 @@ Axe Electrum client was initially written by ThomasV
 This manual page was written by Vasudev Kamath
 <\fIkamathvasudev@gmail.com\fR> for Debian Project (but can be used by
 others).
+
